demos/fleets/default-configs/asm-ingress-gateway/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: asm-gateways
  labels:
    istio-injection: enabled
