demos/fleets/default-configs/asm-ingress-gateway/pubic-gw-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: asm-ingress-gateway-xlb
  namespace: asm-gateways
spec:
  selector:
    matchLabels:
      asm: asm-ingress-gateway-xlb
  template:
    metadata:
      annotations:
        inject.istio.io/templates: gateway
      labels:
        asm: asm-ingress-gateway-xlb
        # asm.io/rev: ${ASM_LABEL} # This is required only if the namespace is not labeled.
    spec:
      containers:
      - name: istio-proxy
        image: auto
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: 2000m
            memory: 1024Mi
          requests:
            cpu: 100m
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - all
          privileged: false
          readOnlyRootFilesystem: true
        volumeMounts:
          - mountPath: "/var/secrets"
            name: certs
      securityContext:
        fsGroup: 1337
        runAsGroup: 1337
        runAsNonRoot: true
        runAsUser: 1337
      serviceAccountName: asm-ingress-gateway
      volumes:
        - name: certs
          csi:
            driver: secrets-store-gke.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: asm-gateway-ss-cert
